XMLExper/m12/m12_511_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLDocument::MarkInUse(const tinyxml2::XMLNode*)’:
tinyxml2.cpp:2230:58: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode* const’) to type ‘class tinyxml2::XMLDeclaration*’ (conversion casts away constness)
 2230 |   if (/*PCI*/dynamic_cast<tinyxml2::XMLDeclaration*>(node) == _unlinked[i]) {
      |                                                          ^
diff: tinyxml2.o: No such file or directory
